[package]
name = "tari_comms"
description = "A peer-to-peer messaging system"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.8.11"
edition = "2018"

[dependencies]
tari_crypto = { git = "ssh://git@github.com/tari-project/tari-crypto.git", branch = "main" }
tari_storage = { version = "^0.8", path = "../infrastructure/storage" }
tari_shutdown = { version="^0.8",  path = "../infrastructure/shutdown" }

anyhow = "1.0.32"
bitflags = "1.0.4"
blake2 = "0.8.1"
bytes = { version = "1", features=["serde"] }
chrono = { version = "0.4.6", features = ["serde"] }
cidr = "0.1.0"
clear_on_drop = "=0.2.4"
data-encoding = "2.2.0"
digest = "0.8.0"
futures =  { version = "^0.3", features = ["async-await"]}
lazy_static = "1.3.0"
lmdb-zero = "0.4.4"
log = { version = "0.4.0", features = ["std"] }
multiaddr = {version = "=0.11.0", package = "parity-multiaddr"}
nom = {version = "5.1.0", features=["std"], default-features=false}
pin-project = "0.4.17"
prost = "=0.7.0"
rand = "0.7.2"
serde = "1.0.119"
serde_derive = "1.0.119"
snow = {version="=0.8.0", features=["default-resolver"]}
thiserror = "1.0.20"
tokio = {version="1.8", features = ["rt", "time", "sync", "signal", "net" ,"macros", "io-util"]}
tokio-util = {version = "0.6.7", features = ["codec", "compat"]}
tokio-stream = {version="0.1.6", features = ["sync"]}
tower= "0.3.1"
yamux = "=0.9.0"

# RPC dependencies
async-trait = {version="0.1.36", optional=true}
tower-make = {version="0.3.0", optional=true}

[dev-dependencies]
tari_test_utils = {version="^0.8", path="../infrastructure/test_utils"}

env_logger = "0.7.0"
serde_json = "1.0.39"
#tokio = {version="1.8", features=["macros"]}
tempfile = "3.1.0"

[build-dependencies]
tari_common = { version = "^0.8", path="../common", features = ["build"]}

[features]
avx2 = ["tari_crypto/avx2"]
rpc = ["async-trait", "tower-make"]
